src/test/ui/generic-associated-types/bugs/issue-86218.stderr
error[E0478]: lifetime bound not satisfied
  --> $DIR/issue-86218.rs:23:28
   |
LL |     type InnerStream<'s> = impl Stream<Item = i32> + 's;
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: lifetime parameter instantiated with the lifetime `'a` as defined here
  --> $DIR/issue-86218.rs:22:6
   |
LL | impl<'a> Yay<&'a ()> for () {
   |      ^^
note: but lifetime parameter must outlive the lifetime `'s` as defined here
  --> $DIR/issue-86218.rs:23:22
   |
LL |     type InnerStream<'s> = impl Stream<Item = i32> + 's;
   |                      ^^

error: unconstrained opaque type
  --> $DIR/issue-86218.rs:23:28
   |
LL |     type InnerStream<'s> = impl Stream<Item = i32> + 's;
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `InnerStream` must be used in combination with a concrete type within the same module

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0478`.
